# PPG

./: CMakeLists.txt  Kconfig  Kconfig.sysbuild  PPG.code-workspace  prj.conf  prj_fw.conf  sample.yaml  sysbuild.conf
boards/: nrf52840dk_nrf52840.overlay
dts/bindings/: maxim,max32664c.yaml
include/: maxm86161.h
python/: analysis.ipynb
src/: ble.c  ble.h  main.c  main_fw.c  main_old.c  max32664_fw.h  max32664c.c  max32664c.h  max32664c_api.h  max32664c_bl.c  max32664c_init.c  max32664c_interrupt.c  max32664c_worker.c  maxm86161.c  new_main.c
